Fix text alignment in non-Firefox browsers

--- a/packages/circuit-ui/components/Button/shared.module.css
+++ b/packages/circuit-ui/components/Button/shared.module.css
@@ -1,6 +1,7 @@
 .base {
   position: relative;
   display: inline-flex;
+  align-items: center;
   justify-content: center;
   width: auto;
   height: auto;
